--- a/index.css
+++ b/index.css
@@ -1,10 +1,14 @@
-.countries {
+header {
     font-family: Arial, Helvetica, sans-serif;
+    color: white;
+    background-color: #aeaee3;
+    height: 24px;
 }
 
-.countries {
+.Countries {
+    font-family: Arial, Helvetica, sans-serif;
     height: 24px;
-    border: 1px solid #ece8e8;
+    border: 1px solid #504f4f;
 }
 
 .small-flag {
